# hsge

./: hsge.cabal
System/: SGE.hs
System/SGE/: Classes.hs  QSub.hs  ShellCmd.hs
