name:                hsge
version:             0.0
synopsis:            Wrapper to SGE commands
description:         Library that allows calls to SGE commands (i.e. qsub) through the shell to be made.
category:            Control, System
license:             BSD3
license-file:        LICENSE
author:              Badi Abdul-Wahid
maintainer:          abdulwahidc@gmail.com
build-type:          Simple
cabal-version:       >= 1.2

Library
    build-depends:       base, HSH >= 2.0.0
    exposed-modules:     System.SGE.Classes,
                         System.SGE.ShellCmd,
                         System.SGE.QSub
    ghc-options: -Wall